--- a/src/assets/json-view.scss
+++ b/src/assets/json-view.scss
@@ -1,10 +1,8 @@
 .json-view {
   font-family: monospace;
   
-  .brackets-start {
+  .collapsible {
     cursor: pointer;
-    padding: 10px;
-    margin: -10px;
     
     &:hover {
       color: red;
